tests/errors/sem.no-subscript-fn.accessee-type.or
main :: () -> void {
    foo := 0;
    foo[0];
};
